--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/MainPage.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/MainPage.xaml
@@ -4,6 +4,7 @@
          xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:LagoVista.XPlat.Sample"
+             LeftMenu="Menu"
              x:Class="LagoVista.XPlat.Sample.MainPage">
 
     <pge:LagoVistaContentPage.MainContent >
