--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/App.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/App.xaml
@@ -2,9 +2,19 @@
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="LagoVista.XPlat.Sample.App">
-	<Application.Resources>
-
-		<!-- Application resource dictionary -->
-
-	</Application.Resources>
+    <Application.Resources>
+        <!-- Application resource dictionary -->
+        <ResourceDictionary>
+            <Color x:Key="NuvIoTContrast">#FFD48D17</Color>
+            <Color x:Key="PageBackground">#2E533D</Color>
+            <Color x:Key="NuvIoTDark">#1976D2</Color>
+            <Color x:Key="NuvIoTLight">#BBDEFB</Color>
+            <Color x:Key="RightNavArrow">#BBDEFB</Color>
+            <Color x:Key="NuvIoTMedium">#2196F3</Color>
+            <Color x:Key="NuvIoTBlack">#171717</Color>
+            <Color x:Key="NuvIoTWhite">#F3F3F3</Color>
+            <Color x:Key="MenuBarBackground">#2E353D</Color>
+            <Color x:Key="MenuBarForeground">#F3F3F3</Color>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
