--- a/src/LagoVista.XPlat.Core/Views/Auth/SendResetPasswordLinkView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Auth/SendResetPasswordLinkView.xaml
@@ -7,7 +7,7 @@
     Title="{ext:ClientTranslate SendResetPasswordLink_Title}">
     <pge:LagoVistaContentPage.MainContent>
         <ScrollView>
-            <Grid BackgroundColor="#2196F3">
+            <Grid  BackgroundColor="{StaticResource NuvIoTMedium}" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
