--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/MainPage.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/MainPage.xaml
@@ -1,13 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <pge:LagoVistaContentPage
-      xmlns:pge="clr-namespace:LagoVista.XPlat.Core;assembly=LagoVista.XPlat.Core"
-         xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:LagoVista.XPlat.Sample"
-             LeftMenu="Menu"
-             
-            RightMenuCustomText="Hello World"
-             x:Class="LagoVista.XPlat.Sample.MainPage">
+    xmlns:pge="clr-namespace:LagoVista.XPlat.Core;assembly=LagoVista.XPlat.Core"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="clr-namespace:LagoVista.XPlat.Sample"
+    LeftMenu="Menu"             
+    Title="Hello World"
+    x:Class="LagoVista.XPlat.Sample.MainPage">
 
     <pge:LagoVistaContentPage.MainContent >
         <pge:FormViewer Form="{Binding FormAdapter}"  />
