--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/MainPage.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/MainPage.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:LagoVista.XPlat.Sample"
     LeftMenu="Menu"             
+    RightMenu="Add"
     Title="Hello World"
     x:Class="LagoVista.XPlat.Sample.MainPage">
 
