major UI cleanup

--- a/src/LagoVista.XPlat.Core/Views/Auth/ChangePasswordView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Auth/ChangePasswordView.xaml
@@ -7,20 +7,20 @@
     Title="{ext:ClientTranslate ChangePassword_Title}">
     <pge:LagoVistaContentPage.MainContent>
         <ScrollView>
-            <Grid BackgroundColor="{StaticResource NuvIoTMedium}">
+            <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
-                <Image Source="nuviot.png" HorizontalOptions="Center" />
+                <pge:Image FileName="{Binding AppConfig.AppLogo}"  HorizontalOptions="Center" WidthRequest="480" />
                 <StackLayout Grid.Row="1" Margin="20" WidthRequest="300" HorizontalOptions="Center" >
-                    <pge:Label Text="{ext:ClientTranslate ChangePassword_OldPassword}" TextColor="White" />
+                    <pge:Label Text="{ext:ClientTranslate ChangePassword_OldPassword}" TextColor="{StaticResource NuvIoTBlack}" />
                     <pge:Entry Text="{Binding Model.OldPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ChangePassword_OldPassword_WaterMark}" IsPassword="True" Keyboard="Plain" Margin="0,0,0,20"  />
 
-                    <pge:Label Text="{ext:ClientTranslate ChangePassword_NewPassword}" TextColor="White" />
+                    <pge:Label Text="{ext:ClientTranslate ChangePassword_NewPassword}" TextColor="{StaticResource NuvIoTBlack}" />
                     <pge:Entry Text="{Binding Model.NewPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ChangePassword_NewPassword_WaterMark}" IsPassword="True" Keyboard="Plain" Margin="0,0,0,20"  />
 
-                    <pge:Label Text="{ext:ClientTranslate ChangePassword_ConfirmNewPassword}" TextColor="White" />
+                    <pge:Label Text="{ext:ClientTranslate ChangePassword_ConfirmNewPassword}" TextColor="{StaticResource NuvIoTBlack}" />
                     <pge:Entry Text="{Binding ConfirmPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ChangePassword_ConfirmNewPassword_WaterMark}" IsPassword="True" Keyboard="Plain" Margin="0,0,0,20"  />
 
                     <pge:Button Command="{Binding ChangePasswordCommand}" Text="{ext:ClientTranslate Common_Submit}" HeightRequest="48" />
