--- a/src/LagoVista.XPlat.Core/Views/Auth/SendResetPasswordLinkView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Auth/SendResetPasswordLinkView.xaml
@@ -7,15 +7,15 @@
     Title="{ext:ClientTranslate SendResetPasswordLink_Title}">
     <pge:LagoVistaContentPage.MainContent>
         <ScrollView>
-            <Grid  BackgroundColor="{StaticResource NuvIoTMedium}" >
+            <Grid >
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
-                <Image Source="nuviot.png" HorizontalOptions="Center" />
+                <Image Source="applogo.png" HorizontalOptions="Center" />
                 <StackLayout Grid.Row="1" Margin="20" WidthRequest="300" HorizontalOptions="Center" >
-                    <pge:Label Text="{ext:ClientTranslate SendResetPasswordLink_Help}" TextColor="White" />
-                    <pge:Label Text="{ext:ClientTranslate SendResetPasswordLink_Email}"  TextColor="White" />
+                    <pge:Label Text="{ext:ClientTranslate SendResetPasswordLink_Help}" TextColor="{StaticResource NuvIoTBlack}" />
+                    <pge:Label Text="{ext:ClientTranslate SendResetPasswordLink_Email}" TextColor="{StaticResource NuvIoTBlack}" />
                     <pge:Entry Text="{Binding EmailAddress, Mode=TwoWay}" Placeholder="{ext:ClientTranslate SendResetPasswordLink_Email_Watermark}"  Keyboard="Email" />
                     <pge:Button Command="{Binding SendResetPasswordLinkCommand}" Text="{ext:ClientTranslate SendRestPasswordLink_Send}" HeightRequest="48" />
                     <pge:Button Command="{Binding CancelCommand}" Text="{ext:ClientTranslate Common_Cancel}" HeightRequest="48" />
