--- a/src/LagoVista.XPlat.Core/Views/Auth/ResetPasswordView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Auth/ResetPasswordView.xaml
@@ -7,19 +7,20 @@
    Title="{ext:ClientTranslate ResetPassword_Title}">
     <pge:LagoVistaContentPage.MainContent>
         <ScrollView>
-            <Grid  BackgroundColor="{StaticResource NuvIoTMedium}" >
+            <Grid >
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
+                <Image Source="applogo.png" HorizontalOptions="Center" />
                 <StackLayout Grid.Row="1" Margin="20" WidthRequest="300" HorizontalOptions="Center" >
-                    <pge:Label Text="{ext:ClientTranslate Common_EmailAddress}"  TextColor="White" />
+                    <pge:Label Text="{ext:ClientTranslate Common_EmailAddress}" TextColor="{StaticResource NuvIoTBlack}" />
                     <pge:Entry Text="{Binding Model.Email, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Common_Email_Watermark}" Keyboard="Email"  />
 
-                    <pge:Label Text="{ext:ClientTranslate ResetPassword_NewPassword}"  TextColor="White" />
+                    <pge:Label Text="{ext:ClientTranslate ResetPassword_NewPassword}" TextColor="{StaticResource NuvIoTBlack}" />
                     <pge:Entry Text="{Binding Model.NewPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ResetPassword_NewPassword_Watermark}"  IsPassword="True" Keyboard="Plain"  />
 
-                    <pge:Label Text="{ext:ClientTranslate ResetPassword_ConfirmNewPassword}" TextColor="White" />
+                    <pge:Label Text="{ext:ClientTranslate ResetPassword_ConfirmNewPassword}" TextColor="{StaticResource NuvIoTBlack}" />
                     <pge:Entry Text="{Binding ConfirmPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ResetPassword_ConfirmNewPassword_Watermark}" IsPassword="True" Keyboard="Plain" Margin="0,0,0,40"  />
 
                     <pge:Button Command="{Binding ResetPasswordCommand}" Text="{ext:ClientTranslate ResetPassword_Submit}" HeightRequest="48" />
