--- a/src/LagoVista.XPlat.Core/Views/Orgs/OrgEditorView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Orgs/OrgEditorView.xaml
@@ -5,7 +5,7 @@
     xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"    
     x:Class="LagoVista.XPlat.Core.Views.Orgs.OrgEditorView"
     LeftMenu="Menu"  RightMenu="Save"
-    Title="{ext:ClientTranslate ChangePassword_Title}">
+    Title="{ext:ClientTranslate OrgEditor_Title}">
     <pge:LagoVistaContentPage.MainContent>
         <pge:FormViewer Form="{Binding FormAdapter}" />
     </pge:LagoVistaContentPage.MainContent>
