--- a/src/LagoVista.XPlat.Core/Views/Users/RegisterView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Users/RegisterView.xaml
@@ -7,34 +7,40 @@
     x:Class="LagoVista.XPlat.Core.Views.Users.RegisterView"
     Title="{ext:ClientTranslate Register_Title}">
     <pge:LagoVistaContentPage.MainContent>
-        <ScrollView>
-            <Grid BackgroundColor="#2196F3">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
-                <Image Source="nuviot.png" HorizontalOptions="Center" />
-                <StackLayout Grid.Row="1" Margin="20" WidthRequest="300" HorizontalOptions="Center" >
-                    <pge:Label Text="{ext:ClientTranslate Register_FirstName}"  TextColor="White" />
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="200" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="300" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <pge:Image FileName="{Binding AppConfig.AppLogo}" UWPPath="Assets" Grid.Column="1" />
+
+            <ScrollView Grid.Column="1" Grid.Row="1">
+                <StackLayout  >
+                    <pge:Label Text="{ext:ClientTranslate Register_FirstName}"  TextColor="{StaticResource NuvIoTBlack}" />
                     <pge:Entry Text="{Binding RegisterModel.FirstName, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Register_FirstName_WaterMark}"  />
 
-                    <pge:Label Text="{ext:ClientTranslate Register_LastName}"  TextColor="White" />
+                    <pge:Label Text="{ext:ClientTranslate Register_LastName}"  TextColor="{StaticResource NuvIoTBlack}" />
                     <pge:Entry Text="{Binding RegisterModel.LastName, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Register_LastName_WaterMark}"  />
 
-                    <pge:Label Text="{ext:ClientTranslate Register_Email}" TextColor="White"  />
+                    <pge:Label Text="{ext:ClientTranslate Register_Email}" TextColor="{StaticResource NuvIoTBlack}" />
                     <pge:Entry Text="{Binding RegisterModel.Email, Mode=TwoWay}"  Placeholder="{ext:ClientTranslate Register_Email_WaterMark}"  Keyboard="Email"  />
 
-                    <pge:Label Text="{ext:ClientTranslate Register_Password}" TextColor="White" />
+                    <pge:Label Text="{ext:ClientTranslate Register_Password}" TextColor="{StaticResource NuvIoTBlack}" />
                     <pge:Entry Text="{Binding RegisterModel.Password, Mode=TwoWay}"  Placeholder="{ext:ClientTranslate Register_Password_Watermark}"  IsPassword="True" Keyboard="Plain" />
 
-                    <pge:Label Text="{ext:ClientTranslate Register_Confirm_Password}" TextColor="White" />
-                    <pge:Entry Text="{Binding ConfirmPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Register_ConfirmPassword_Watermark}"  IsPassword="True" Keyboard="Plain" Margin="0,0,0,40" />
+                    <pge:Label Text="{ext:ClientTranslate Register_Confirm_Password}" TextColor="{StaticResource NuvIoTBlack}" />
+                    <pge:Entry Text="{Binding ConfirmPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Register_ConfirmPassword_Watermark}"  IsPassword="True" Keyboard="Plain" Margin="0,0,0,15" />
 
-                    <pge:Button Command="{Binding RegisterCommand}" Text="{ext:ClientTranslate Register_Title}" HeightRequest="48" />
+                    <pge:Button Command="{Binding RegisterCommand}" Text="{ext:ClientTranslate Register_Title}" HeightRequest="42" WidthRequest="100" />
+                    <pge:HyperLinkLabel NavigateCommand="{Binding CancelCommand}" Text="{ext:ClientTranslate Common_Cancel}" TextColor="{StaticResource NuvIoTDark}" FontSize="Small" Margin="0,15,0,0"  />
                 </StackLayout>
-                <Image Source="softwarelogistics.png" HorizontalOptions="Center" Grid.Row="2" />
-            </Grid>
-        </ScrollView>
+            </ScrollView>
+        </Grid>
     </pge:LagoVistaContentPage.MainContent>
 </pge:LagoVistaContentPage>
