--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/ControlSampleView.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/ControlSampleView.xaml
@@ -4,6 +4,7 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:LagoVista.XPlat.Sample"
+    LeftMenu="Back"
     x:Class="LagoVista.XPlat.Sample.ControlSampleView">
     <pge:LagoVistaContentPage.MainContent >
         <Grid>
