--- a/src/LagoVista.XPlat.Core/Views/Auth/ChangePasswordView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Auth/ChangePasswordView.xaml
@@ -6,27 +6,34 @@
     x:Class="LagoVista.XPlat.Core.Views.Auth.ChangePasswordView"
     Title="{ext:ClientTranslate ChangePassword_Title}">
     <pge:LagoVistaContentPage.MainContent>
-        <ScrollView>
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="auto" />
-                </Grid.RowDefinitions>
-                <pge:Image FileName="{Binding AppConfig.AppLogo}"  HorizontalOptions="Center" WidthRequest="480" />
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="200" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="300" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <pge:Image FileName="{Binding AppConfig.AppLogo}" UWPPath="Assets" Grid.Column="1" />
+            <ScrollView Grid.Column="1" Grid.Row="1">
                 <StackLayout Grid.Row="1" Margin="20" WidthRequest="300" HorizontalOptions="Center" >
-                    <pge:Label Text="{ext:ClientTranslate ChangePassword_OldPassword}" TextColor="{StaticResource NuvIoTBlack}" />
+                    <pge:Label Text="{ext:ClientTranslate ChangePassword_OldPassword}" TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold" />
                     <pge:Entry Text="{Binding Model.OldPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ChangePassword_OldPassword_WaterMark}" IsPassword="True" Keyboard="Plain" Margin="0,0,0,20"  />
 
-                    <pge:Label Text="{ext:ClientTranslate ChangePassword_NewPassword}" TextColor="{StaticResource NuvIoTBlack}" />
+                    <pge:Label Text="{ext:ClientTranslate ChangePassword_NewPassword}" TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold"  />
                     <pge:Entry Text="{Binding Model.NewPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ChangePassword_NewPassword_WaterMark}" IsPassword="True" Keyboard="Plain" Margin="0,0,0,20"  />
 
-                    <pge:Label Text="{ext:ClientTranslate ChangePassword_ConfirmNewPassword}" TextColor="{StaticResource NuvIoTBlack}" />
+                    <pge:Label Text="{ext:ClientTranslate ChangePassword_ConfirmNewPassword}" TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold"  />
                     <pge:Entry Text="{Binding ConfirmPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ChangePassword_ConfirmNewPassword_WaterMark}" IsPassword="True" Keyboard="Plain" Margin="0,0,0,20"  />
 
                     <pge:Button Command="{Binding ChangePasswordCommand}" Text="{ext:ClientTranslate Common_Submit}" HeightRequest="48" />
-                    <pge:Button Command="{Binding CancelCommand}" Text="{ext:ClientTranslate Common_Cancel}" HeightRequest="48" />
+                    <pge:HyperLinkLabel NavigateCommand="{Binding LogoutCommand}" Text="{ext:ClientTranslate Common_Logout}" TextColor="{StaticResource NuvIoTDark}" FontSize="Small"   />
                 </StackLayout>
-            </Grid>
-        </ScrollView>
+            </ScrollView>
+        </Grid>
+
     </pge:LagoVistaContentPage.MainContent>
 </pge:LagoVistaContentPage>
