--- a/src/LagoVista.XPlat.Core/Views/Auth/SendResetPasswordLinkView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Auth/SendResetPasswordLinkView.xaml
@@ -3,24 +3,33 @@
     xmlns:pge="clr-namespace:LagoVista.XPlat.Core;assembly=LagoVista.XPlat.Core"
     xmlns:ext="clr-namespace:LagoVista.XPlat.Core.Extensions"    
     xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="LagoVista.XPlat.Core.Views.Auth.SendResetPasswordView"
-    Title="{ext:ClientTranslate SendResetPasswordLink_Title}">
+    HasToolBar="False"
+    x:Class="LagoVista.XPlat.Core.Views.Auth.SendResetPasswordView">
     <pge:LagoVistaContentPage.MainContent>
-        <ScrollView>
-            <Grid >
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="auto" />
-                </Grid.RowDefinitions>
-                <Image Source="applogo.png" HorizontalOptions="Center" />
-                <StackLayout Grid.Row="1" Margin="20" WidthRequest="300" HorizontalOptions="Center" >
+
+        <Grid >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="160" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="300" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <pge:Image FileName="{Binding AppConfig.AppLogo}" UWPPath="Assets" Grid.Column="1" />
+
+            <ScrollView Grid.Row="1" Grid.Column="1">
+                <StackLayout  >
                     <pge:Label Text="{ext:ClientTranslate SendResetPasswordLink_Help}" TextColor="{StaticResource NuvIoTBlack}" />
-                    <pge:Label Text="{ext:ClientTranslate SendResetPasswordLink_Email}" TextColor="{StaticResource NuvIoTBlack}" />
+
+                    <pge:Label Text="{ext:ClientTranslate Common_Password}"  TextColor="{StaticResource NuvIoTBlack}"  FontAttributes="Bold" Margin="0,15,0,0" />
                     <pge:Entry Text="{Binding EmailAddress, Mode=TwoWay}" Placeholder="{ext:ClientTranslate SendResetPasswordLink_Email_Watermark}"  Keyboard="Email" />
                     <pge:Button Command="{Binding SendResetPasswordLinkCommand}" Text="{ext:ClientTranslate SendRestPasswordLink_Send}" HeightRequest="48" />
-                    <pge:Button Command="{Binding CancelCommand}" Text="{ext:ClientTranslate Common_Cancel}" HeightRequest="48" />
+                    <pge:HyperLinkLabel NavigateCommand="{Binding CancelCommand}" Text="{ext:ClientTranslate Common_Cancel}" TextColor="{StaticResource NuvIoTDark}" FontSize="Small" Margin="0,15,0,30"  />
                 </StackLayout>
-            </Grid>
-        </ScrollView>
+            </ScrollView>
+        </Grid>
     </pge:LagoVistaContentPage.MainContent>
 </pge:LagoVistaContentPage>
