--- a/src/LagoVista.XPlat.Core/Views/Orgs/AcceptInviteView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Orgs/AcceptInviteView.xaml
@@ -5,26 +5,33 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:ext="clr-namespace:LagoVista.XPlat.Core.Extensions"    
     x:Class="LagoVista.XPlat.Core.Views.Orgs.AcceptInviteView"
-    Title="{ext:ClientTranslate AcceptInvite_Title}">
+    HasToolBar="False">
     <pge:LagoVistaContentPage.MainContent>
-        <ScrollView>
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="auto" />
-                </Grid.RowDefinitions>
-                <pge:Image FileName="{Binding AppConfig.AppLogo}"  HorizontalOptions="Center" WidthRequest="480" />
+
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="200" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="300" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <pge:Image FileName="{Binding AppConfig.AppLogo}" UWPPath="Assets" Grid.Column="1" />
+            <ScrollView Grid.Row="1" Grid.Column="1">
                 <StackLayout Grid.Row="1" Margin="20" WidthRequest="300" HorizontalOptions="Center" >
                     <Label TextColor="{StaticResource NuvIoTBlack}" Text="{ext:ClientTranslate AcceptInvite_Accept_Help}" IsVisible="{Binding IsLoggedIn}" />
                     <pge:Button Command="{Binding AcceptInviteCommnad}" Text="{ext:ClientTranslate AcceptInvite_Accept}" HeightRequest="48" IsVisible="{Binding IsLoggedIn}"/>
 
-                    <Label TextColor="{StaticResource NuvIoTBlack}" Text="{ext:ClientTranslate AcceptInvite_AcceptAndLogin_Help}" IsVisible="{Binding IsNotLoggedIn}" />
+                    <Label TextColor="{StaticResource NuvIoTBlack}" Text="{ext:ClientTranslate AcceptInvite_AcceptAndLogin_Help}" IsVisible="{Binding IsNotLoggedIn}"  />
                     <pge:Button Command="{Binding AcceptAndLoginCommand}" Text="{ext:ClientTranslate AcceptInvite_AcceptAndLogin}" HeightRequest="48" IsVisible="{Binding IsNotLoggedIn}"/>
 
                     <Label TextColor="{StaticResource NuvIoTBlack}" Text="{ext:ClientTranslate AcceptInvite_AcceptAndRegister_Help}"  />
                     <pge:Button Command="{Binding AcceptAndRegisterCommand}" Text="{ext:ClientTranslate AcceptInvite_AcceptAndRegister}" HeightRequest="48" />
                 </StackLayout>
-            </Grid>
-        </ScrollView>
+            </ScrollView>
+        </Grid>
     </pge:LagoVistaContentPage.MainContent>
 </pge:LagoVistaContentPage>
