--- a/src/LagoVista.XPlat.Core/Views/Orgs/InviteUserView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Orgs/InviteUserView.xaml
@@ -4,33 +4,39 @@
     xmlns="http://xamarin.com/schemas/2014/forms" 
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:ext="clr-namespace:LagoVista.XPlat.Core.Extensions"    
+    LeftMenu="Cancel"
     x:Class="LagoVista.XPlat.Core.Views.Orgs.InviteUserView"
     Title="{ext:ClientTranslate InviteUser_Title}">
     <pge:LagoVistaContentPage.MainContent>
-        <ScrollView>
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="auto"/>
-                </Grid.RowDefinitions>
-                <Image Source="applogo.png" HorizontalOptions="Center" />
-                <StackLayout Grid.Row="1" Margin="20" WidthRequest="300" HorizontalOptions="Center" >
-
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="160" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="300" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <pge:Image FileName="{Binding AppConfig.AppLogo}" UWPPath="Assets" Grid.Column="1" />
+            <ScrollView Grid.Row="1" Grid.Column="1">
+                <StackLayout  >
                     <pge:Label Text="{Binding InviteUserHelpMessage}" TextColor="{StaticResource NuvIoTBlack}"  Margin="0,0,0,20" />
 
-                    <pge:Label Text="{ext:ClientTranslate InviteUser_Name}" TextColor="{StaticResource NuvIoTBlack}" />
+                    <pge:Label Text="{ext:ClientTranslate InviteUser_Name}" TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold"  />
                     <pge:Entry Text="{Binding Model.Name, Mode=TwoWay}" Placeholder="{ext:ClientTranslate InviteUser_Name_Watermark}" Keyboard="Plain" />
 
-                    <pge:Label Text="{ext:ClientTranslate InviteUser_Email}" TextColor="{StaticResource NuvIoTBlack}" />
+                    <pge:Label Text="{ext:ClientTranslate InviteUser_Email}" TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold"  />
                     <pge:Entry Text="{Binding Model.Email, Mode=TwoWay}" Placeholder="{ext:ClientTranslate InviteUser_Email_Watermark}" Keyboard="Email"  />
 
-                    <pge:Label Text="{ext:ClientTranslate InviteUser_Message}" TextColor="{StaticResource NuvIoTBlack}" />
+                    <pge:Label Text="{ext:ClientTranslate InviteUser_Message}" TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold" />
                     <Editor Text="{Binding Model.Message, Mode=TwoWay}" Keyboard="Plain" HeightRequest="120" Margin="0,0,0,20" />
 
                     <pge:Button Command="{Binding InviteUserCommand}" Text="{ext:ClientTranslate InviteUser_Submit}" HeightRequest="48" />
-                    <pge:Button Command="{Binding CancelCommand}" Text="{ext:ClientTranslate Common_Cancel}" HeightRequest="48" />
+                    <pge:HyperLinkLabel NavigateCommand="{Binding CancelCommand}" Text="{ext:ClientTranslate Common_Cancel}" TextColor="{StaticResource NuvIoTDark}" FontSize="Small" Margin="0,15,0,0"  />
                 </StackLayout>
-            </Grid>
-        </ScrollView>
+            </ScrollView>
+        </Grid>
     </pge:LagoVistaContentPage.MainContent>
 </pge:LagoVistaContentPage>
