--- a/src/LagoVista.XPlat.Core/Views/Users/RegisterView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Users/RegisterView.xaml
@@ -9,7 +9,7 @@
     <pge:LagoVistaContentPage.MainContent>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="200" />
+                <RowDefinition Height="160" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
@@ -19,22 +19,21 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <pge:Image FileName="{Binding AppConfig.AppLogo}" UWPPath="Assets" Grid.Column="1" />
-
             <ScrollView Grid.Column="1" Grid.Row="1">
                 <StackLayout  >
-                    <pge:Label Text="{ext:ClientTranslate Register_FirstName}"  TextColor="{StaticResource NuvIoTBlack}" />
+                    <pge:Label Text="{ext:ClientTranslate Register_FirstName}"  TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold" />
                     <pge:Entry Text="{Binding RegisterModel.FirstName, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Register_FirstName_WaterMark}"  />
 
-                    <pge:Label Text="{ext:ClientTranslate Register_LastName}"  TextColor="{StaticResource NuvIoTBlack}" />
+                    <pge:Label Text="{ext:ClientTranslate Register_LastName}"  TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold"/>
                     <pge:Entry Text="{Binding RegisterModel.LastName, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Register_LastName_WaterMark}"  />
 
-                    <pge:Label Text="{ext:ClientTranslate Register_Email}" TextColor="{StaticResource NuvIoTBlack}" />
+                    <pge:Label Text="{ext:ClientTranslate Register_Email}" TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold"/>
                     <pge:Entry Text="{Binding RegisterModel.Email, Mode=TwoWay}"  Placeholder="{ext:ClientTranslate Register_Email_WaterMark}"  Keyboard="Email"  />
 
-                    <pge:Label Text="{ext:ClientTranslate Register_Password}" TextColor="{StaticResource NuvIoTBlack}" />
+                    <pge:Label Text="{ext:ClientTranslate Register_Password}" TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold"/>
                     <pge:Entry Text="{Binding RegisterModel.Password, Mode=TwoWay}"  Placeholder="{ext:ClientTranslate Register_Password_Watermark}"  IsPassword="True" Keyboard="Plain" />
 
-                    <pge:Label Text="{ext:ClientTranslate Register_Confirm_Password}" TextColor="{StaticResource NuvIoTBlack}" />
+                    <pge:Label Text="{ext:ClientTranslate Register_Confirm_Password}" TextColor="{StaticResource NuvIoTBlack}"  FontAttributes="Bold"/>
                     <pge:Entry Text="{Binding ConfirmPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Register_ConfirmPassword_Watermark}"  IsPassword="True" Keyboard="Plain" Margin="0,0,0,15" />
 
                     <pge:Button Command="{Binding RegisterCommand}" Text="{ext:ClientTranslate Register_Title}" HeightRequest="42" WidthRequest="100" />
