--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/BTSerialView.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/BTSerialView.xaml
@@ -6,6 +6,7 @@
         xmlns:d="http://xamarin.com/schemas/2014/forms/design"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
+        LeftMenu="Back"
         x:Class="LagoVista.XPlat.Sample.BTSerialView">
     <pge:LagoVistaContentPage.MainContent >
         <Grid>
@@ -19,7 +20,7 @@
                 <ColumnDefinition Width="50*" />
                 <ColumnDefinition Width="50*" />
             </Grid.ColumnDefinitions>
-                <Label Text="Blue Tooth Devices" />
+            <Label Text="Blue Tooth Devices" />
             <Button Command="{Binding SendDFUCommand}" Text="Send DFU" Grid.Row="1" />
             <ListView ItemsSource="{Binding Devices}" Grid.Row="2" SelectedItem="{Binding SelectedDevice, Mode=TwoWay}" Grid.ColumnSpan="2">
                 <ListView.ItemTemplate>
