--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/Views/HomeView.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/Views/HomeView.xaml
@@ -5,6 +5,7 @@
         xmlns:ctls="clr-namespace:LagoVista.XPlat.Core.Controls.Common;assembly=LagoVista.XPlat.Core"
         xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
         Title="Home View"
+        LeftMenu="Menu"
         x:Class="LagoVista.XPlat.Sample.Views.HomeView">
     <pge:LagoVistaContentPage.MainContent >
         <ListView ItemsSource="{Binding MenuOptions}" SelectedItem="{Binding SelectedMenuOption}" BackgroundColor="White">
