--- a/src/LagoVista.XPlat.Core/Views/DeviceAccess/DevicesView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceAccess/DevicesView.xaml
@@ -5,6 +5,7 @@
             xmlns="http://xamarin.com/schemas/2014/forms"
             LeftMenu="Back"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+            xmlns:ctls="clr-namespace:LagoVista.XPlat.Core.Controls.Common;assembly=LagoVista.XPlat.Core"
             x:Class="LagoVista.XPlat.Core.Views.DeviceAccess.DevicesView"
             Title="{trs:ClientTranslate DevicesView_Title}" >
     <pge:LagoVistaContentPage.MainContent>
@@ -25,20 +26,7 @@
             <ListView ItemsSource="{Binding ListItems}" RowHeight="64" SelectedItem="{Binding SelectedItem, Mode=TwoWay}" Grid.Row="2" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <ViewCell>
-                            <Grid HeightRequest="64" Padding="0,16,0,0">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="32" />
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="8" />
-                                    <ColumnDefinition Width="auto" />
-                                    <ColumnDefinition Width="*" />
-                                </Grid.ColumnDefinitions>
-                                <pge:Icon IconKey="fa-microchip"  Grid.Column="1" FontSize="24" VerticalOptions="Center" TextColor="{StaticResource NuvIoTBlack}"  />
-                                <Label Text="{Binding DeviceName}" FontFamily="Roboto" Margin="8,0,0,0"  Grid.Column="2" FontSize="24" TextColor="{StaticResource NuvIoTBlack}" VerticalOptions="Center" />
-                            </Grid>
-                        </ViewCell>
+                        <ctls:NavigationViewCell Icon="fa-microchip" Text="{Binding DeviceName}" />
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
