--- a/src/LagoVista.XPlat.Core/Views/Auth/LoginView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Auth/LoginView.xaml
@@ -23,10 +23,10 @@
 
             <ScrollView Grid.Row="1" Grid.Column="1">
                 <StackLayout  >
-                    <pge:Label Text="{ext:ClientTranslate Common_EmailAddress}"  TextColor="{StaticResource NuvIoTBlack}"  FontAttributes="Bold" />
+                    <pge:Label Text="{ext:ClientTranslate Common_EmailAddress}"  TextColor="{StaticResource LabelText}"  FontAttributes="Bold" />
                     <pge:Entry Text="{Binding EmailAddress, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Common_Email_Watermark}"  Keyboard="Email" />
 
-                    <pge:Label Text="{ext:ClientTranslate Common_Password}"  TextColor="{StaticResource NuvIoTBlack}"  FontAttributes="Bold" />
+                    <pge:Label Text="{ext:ClientTranslate Common_Password}"  TextColor="{StaticResource LabelText}"  FontAttributes="Bold" />
                     <pge:Entry Text="{Binding Password, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Common_Email_Password}" IsPassword="True" Keyboard="Plain" Margin="0,0,0,10"  />
 
                     <pge:Button Command="{Binding LoginCommand}" Text="{ext:ClientTranslate Common_Login}" HeightRequest="42" WidthRequest="100" Margin="0,0,0,20" />
